# LearnOpenGL

./: CMakeLists.txt
include/: shaders.h  window.h
include/glad/: glad.h
src/: glad.c  main.cpp  shaders.cpp  window.cpp
